[project]
name = "embedding-final-project"
version = "0.1.0"
description = "Jetbot nav"
readme = "README.md"
requires-python = ">=3.6"
dependencies = ["numpy>=1.17", "typing_extensions>=4.1"]

[project.optional-dependencies]
opencv = ["opencv-python>=4.5"]

[tool.ruff]
line-length = 100


[tool.pyright]
pythonVersion = "3.6"
typeCheckingMode = "basic"
reportMissingImports = "none"
